2008-12-08  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/tracker/totem-tracker-widget.c:
	Fix building with newer versions of tracker (Closes: #563706)

2008-12-08  Bastien Nocera  <hadess@hadess.net>

	* bindings/python/totem.defs:
	* src/plugins/properties/totem-movie-properties.c
	(totem_movie_properties_plugin_metadata_updated):
	* src/totem-object.c (totem_object_class_init),
	(totem_metadata_updated):
	* src/totem.c (totem_get_nice_name_for_stream),
	(on_channels_change_event), (on_got_metadata_event):
	* src/totem.h:
	* src/totemobject-marshal.list: Fix the metadata-updated
	signal to actually pass data, add track number to its
	arguments (Closes: #562788)

2008-12-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c (totem_fullscreen_motion_notify),
	(totem_fullscreen_show_popups):
	* src/totem-fullscreen.h:
	* src/totem.c (totem_action_remote), (on_mouse_click_fullscreen),
	(totem_action_handle_key_press), (totem_action_handle_scroll):
	Show the popup when seeking with the keyboard in fullscreen,
	patch from Robin Stocker <robin@nibor.org> (Closes: #559024)

2008-12-08  Bastien Nocera  <hadess@hadess.net>

	* data/icons/16x16/Makefile.am:
	* data/icons/16x16/totem-tv.svg:
	* data/icons/22x22/Makefile.am:
	* data/icons/22x22/totem-tv.svg:
	* data/icons/24x24/Makefile.am:
	* data/icons/32x32/Makefile.am:
	* data/icons/32x32/totem-tv.svg:
	* data/icons/48x48/Makefile.am:
	* data/icons/scalable/Makefile.am:
	* data/icons/scalable/totem-tv.svg:
	Add TV icon from da.needcoffee at googlemail.com
	http://lists.freedesktop.org/archives/tango-artists/2007-June/001336.html

	* src/totem-menu.c (update_dvb_menu_items): Use
	new icon in the menus for DVB adapters (Closes: #515763)

2008-12-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_set_show_visuals):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_set_show_visuals):
	* src/backend/bacon-video-widget.h: