@@ -12,6 +12,7 @@ data/totem.schemas.in
 [type: gettext/glade]data/uri.ui
 lib/totem-scrsaver.c
 src/totem-cell-renderer-video.c
+src/totem-dnd-menu.c
 src/totem-fullscreen.c
 src/totem-interface.c
 src/totem-menu.c
