@@ -1,3 +1,7 @@
+2008-12-10  Bastien Nocera  <hadess@hadess.net>
+
+	* POTFILES.in: Add new file
+
 2008-12-08  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Mattias Põldaru
