@@ -1,3 +1,13 @@
+2008-12-10  Bastien Nocera  <hadess@hadess.net>
+
+	* src/Makefile.am:
+	* src/totem-dnd-menu.[ch]:
+	* src/totem-playlist.c (drop_cb):
+	* src/totem.c (drop_video_cb), (drag_motion_video_cb):
+	Patch from Maxim Ermilov <zaspire@rambler.ru> to allow
+	"ask" drag'n'drop on the treeview and the video widget
+	(Closes: #563252)
+
 2008-12-08  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plugins/tracker/totem-tracker-widget.c:
